--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<h3 class="display-5 font-weight-bold text-center pt-1">Server component is here!!!</h3>
+<h3 class="display-5 font-weight-bold text-center pt-1">{{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}</h3>
