--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,34 @@
-<!--<h3 class="display-4 font-weight-bold text-center pt-5">I`m Shturman</h3>-->
-<!--<hr>-->
-<!--<label>Server name</label>-->
-<!--<input type="text" class="form-control" [(ngModel)]="serverName">-->
-<!--<button class="btn btn-danger m-auto" (click)="onCreateServer()">Add server</button>-->
-<!--<p>{{serverCreationStatus}}</p>-->
-<!--<app-server></app-server>-->
-<!--<hr>-->
-<div class="container">
+
+<div class="container pt-5">
   <div class="row justify-content-center">
-    <div class="col-6">
-      <label>Username</label>
+    <div class="col-8">
+      <h3 class="display-4 font-weight-bold text-center pt-5">I`m Shturman</h3>
+      <hr>
+      <label>Server name</label>
+      <input type="text" class="form-control" [(ngModel)]="serverName">
       <br>
-      <input type="text" [(ngModel)]="username" class="form-control">
-      <p>{{username}}</p>
-      <button class="btn btn-outline-success" [disabled]="username === ''" (click)="username = ''" >Clear</button>
+      <button class="btn btn-danger m-auto" (click)="onCreateServer()">Add server</button>
+
+      <p *ngIf="serverCreated" >Server was created, server name is {{ serverName }}</p>
+      <app-server *ngFor="let server of servers"></app-server>
     </div>
   </div>
+  <div class="row  justify-content-center">
+    <div class="col-8">
+      <button (click)="addLog()" class="btn btn-outline-info">Add Log</button>
+      <div *ngFor="let log of logs; let i = index"
+           [ngStyle]="{backgroundColor: i >=4 ? 'blue' : 'transparent'}"
+           [ngClass]="{'white-text': i >=4 }">{{log}}</div>
+    </div>
+  </div>
+  <!--<div class="row justify-content-center">-->
+    <!--<div class="col-6">-->
+      <!--<h3 class="text-center">Using two-way data-binding</h3>-->
+      <!--<label>Username</label>-->
+      <!--<br>-->
+      <!--<input type="text" [(ngModel)]="username" class="form-control">-->
+      <!--<p>{{username}}</p>-->
+      <!--<button class="btn btn-outline-success" [disabled]="username === ''" (click)="username = ''" >Clear</button>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
