--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,6 @@
-<h3 class="display-5 font-weight-bold text-center pt-1">{{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}</h3>
+<h3
+  [ngClass]="{online: serverStatus === 'online'}"
+  [ngStyle]="{backgroundColor:getColor()}"
+  class="display-5 font-weight-bold text-center pt-1">
+  {{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}
+</h3>
