--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,7 @@
-
-<div class="container pt-5">
-  <div class="row justify-content-center">
-    <div class="col-8">
-      <h3 class="display-4 font-weight-bold text-center pt-5">I`m Shturman</h3>
-      <hr>
-      <label>Server name</label>
-      <input type="text" class="form-control" [(ngModel)]="serverName">
-      <br>
-      <button class="btn btn-danger m-auto" (click)="onCreateServer()">Add server</button>
-
-      <p *ngIf="serverCreated" >Server was created, server name is {{ serverName }}</p>
-      <app-server *ngFor="let server of servers"></app-server>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>I`m Shturman</h2>
     </div>
   </div>
-  <div class="row  justify-content-center">
-    <div class="col-8">
-      <button (click)="addLog()" class="btn btn-outline-info">Add Log</button>
-      <div *ngFor="let log of logs; let i = index"
-           [ngStyle]="{backgroundColor: i >=4 ? 'blue' : 'transparent'}"
-           [ngClass]="{'white-text': i >=4 }">{{log}}</div>
-    </div>
-  </div>
-  <!--<div class="row justify-content-center">-->
-    <!--<div class="col-6">-->
-      <!--<h3 class="text-center">Using two-way data-binding</h3>-->
-      <!--<label>Username</label>-->
-      <!--<br>-->
-      <!--<input type="text" [(ngModel)]="username" class="form-control">-->
-      <!--<p>{{username}}</p>-->
-      <!--<button class="btn btn-outline-success" [disabled]="username === ''" (click)="username = ''" >Clear</button>-->
-    <!--</div>-->
-  <!--</div>-->
 </div>
