--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,13 @@
-<p>
-  recipe-item works!
-</p>
+<a href="#" class="list-group-item-success clearfix" (click)="onSelected()">
+  <div class="list-group">
+    <li class="list-group-item list-group-item-light mt-1">
+      <div class="float-left">
+        <h4>{{recipe.name}}</h4>
+        <p class="pt-1">{{recipe.description}}</p>
+      </div>
+      <span class="float-right">
+          <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height: 70px;">
+        </span>
+    </li>
+  </div>
+</a>
